loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:8: error: '<-' expected but ')' found.
for (n -> 1 to 3){
                ^LoopStairs:12: error: illegal start of simple expression
	}
        ^